fixed package name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pp.auth
+name = pp-auth
 version = 1.0.2
 description =  Authorization and Authentication modules
 author =  Edward Easton, Oisin Mulvihill
