Update setup.cfg to fix dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,11 @@ keywords =
 classifiers =
     Topic :: Software Development :: Libraries
 
+# pyparsing 1.5.7 because pyparsing 2.0.0 requires python 3.x
 install_requires =
     mock
     passlib
+    pyparsing==1.5.7
     pp-db
     repoze.who==1.0.19
     repoze.what==1.0.9
