adding tokenlib wrapper and handling

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ install_requires =
     passlib
     pyparsing==1.5.7
     pp-db
+    tokenlib
     repoze.who==1.0.19
     repoze.what==1.0.9
     repoze.what.plugins.ini==0.2.2
