added ignore and updated author email

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pp-auth
 version = 1.0.2
 description =  Authorization and Authentication modules
 author =  Edward Easton, Oisin Mulvihill
-author_email = everyone@pythonpro.co.uk
+author_email = opensource@pythonpro.co.uk
 keywords =
 
 classifiers =
